Codereview and refactor